# voltius

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCKER.md  Dockerfile.android  Dockerfile.android-emulator  Dockerfile.cross-compile  Dockerfile.tauri-headless  MONITORING.md  NOTICE.md  PF_HOST_SCOPED_PLAN.md  README.md  SOCIAL_DRAFTS.md  compose.headless.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite-plugin-lucide-subset.ts  vite.config.ts  vitest.config.ts
.cargo-home/: .global-cache
.claude/plans/: CORE.md  FUTURE.md  OMNI_SEARCH.md  PLUGINS_NOTIFICATIONS_API.md  PLUGINS_SYSTEM_IMPROVEMENTS.md  PLUGIN_GIST_SYNC.md  PLUGIN_SYSTEM.md  PORT_FORWARDING.md  SERVER.md  SNIPPETS.md  SUBSCRIPTION.md  TEAM_FEATURES.md  UI.md
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md
.github/workflows/: _verify-cask.yml  (+10 more)
docs/: android-dev.md  android-feature-gaps.md  sync-split-key-bug.md
keystore/: voltius-debug.keystore
scripts/: android-build.sh  android-deploy.sh  android-emulator.sh  bootstrap-winget.sh  build-apt-repo.sh  gen-homebrew-cask.sh
src/: vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
tests/: accessibleVaults.test.ts  connectionCredentials.test.ts  crdtEntities.test.ts  emailVerification.test.ts  hostSelection.test.ts  importExportCredentials.test.ts  importExportDuplicates.test.ts  importExportEncryption.test.ts  newSessionItems.test.ts  quickConnect.test.ts  teamVaultMigration.test.ts  teamVaultPermissions.test.ts  teamVaultRefresh.test.ts  teamVaultSecrets.test.ts  usePermission.test.ts
(+1297 files in other folders)
